deploy: bcdcca550bb2dffef1dbb5890dc62865c42ed80f

--- a/print.html
+++ b/print.html
@@ -89,7 +89,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="Intro.html"><strong aria-hidden="true">1.</strong> 我的笔记</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tool-usage/Intro.html"><strong aria-hidden="true">1.1.</strong> 工具</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tool-usage/Chapter1.html"><strong aria-hidden="true">1.1.1.</strong> Powershell</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter2.html"><strong aria-hidden="true">1.1.2.</strong> Git</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter3.html"><strong aria-hidden="true">1.1.3.</strong> Docker</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter4.html"><strong aria-hidden="true">1.1.4.</strong> wireguard</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter5.html"><strong aria-hidden="true">1.1.5.</strong> vim</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter6.html"><strong aria-hidden="true">1.1.6.</strong> qBittorent</a></li></ol></li><li class="chapter-item expanded "><a href="web-develop/Intro.html"><strong aria-hidden="true">1.2.</strong> 搭建</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="web-develop/Chapter1.html"><strong aria-hidden="true">1.2.1.</strong> mdbook</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter2.html"><strong aria-hidden="true">1.2.2.</strong> react</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter3.html"><strong aria-hidden="true">1.2.3.</strong> openwrt</a></li></ol></li><li class="chapter-item expanded "><a href="linux/Intro.html"><strong aria-hidden="true">1.3.</strong> linux</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="linux/Chapter1.html"><strong aria-hidden="true">1.3.1.</strong> linux</a></li><li class="chapter-item expanded "><a href="linux/Chapter2.html"><strong aria-hidden="true">1.3.2.</strong> vim</a></li><li class="chapter-item expanded "><a href="linux/Chapter3.html"><strong aria-hidden="true">1.3.3.</strong> Git</a></li></ol></li><li class="chapter-item expanded "><a href="learn/Intro.html"><strong aria-hidden="true">1.4.</strong> learn</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/react/Intro.html"><strong aria-hidden="true">1.4.1.</strong> react</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/react/Chapter1.html"><strong aria-hidden="true">1.4.1.1.</strong> 组件分类</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter2.html"><strong aria-hidden="true">1.4.1.2.</strong> jsx语法</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter3.html"><strong aria-hidden="true">1.4.1.3.</strong> 事件绑定</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter4.html"><strong aria-hidden="true">1.4.1.4.</strong> 响应式数据</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter5.html"><strong aria-hidden="true">1.4.1.5.</strong> 条件渲染和列表循环</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter6.html"><strong aria-hidden="true">1.4.1.6.</strong> 表单绑定</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter7.html"><strong aria-hidden="true">1.4.1.7.</strong> props和组件间传值插槽</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter8.html"><strong aria-hidden="true">1.4.1.8.</strong> 样式操作</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter9.html"><strong aria-hidden="true">1.4.1.9.</strong> 生命周期</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter10.html"><strong aria-hidden="true">1.4.1.10.</strong> -ref和context</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter11.html"><strong aria-hidden="true">1.4.1.11.</strong> 函数组件和hooks</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter12.html"><strong aria-hidden="true">1.4.1.12.</strong> 高阶组件</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter13.html"><strong aria-hidden="true">1.4.1.13.</strong> 性能问题和优化</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter14.html"><strong aria-hidden="true">1.4.1.14.</strong> -reuter的使用</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter15.html"><strong aria-hidden="true">1.4.1.15.</strong> 全局状态管理</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter16.html"><strong aria-hidden="true">1.4.1.16.</strong> 路由权限控制</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter17.html"><strong aria-hidden="true">1.4.1.17.</strong> 组件库等相关生态</a></li></ol></li><li class="chapter-item expanded "><a href="learn/vue/Intro.html"><strong aria-hidden="true">1.4.2.</strong> vue</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/vue/Chapter1.html"><strong aria-hidden="true">1.4.2.1.</strong> 组件</a></li><li class="chapter-item expanded "><a href="learn/vue/Chapter2.html"><strong aria-hidden="true">1.4.2.2.</strong> 指令</a></li><li class="chapter-item expanded "><a href="learn/vue/Chapter3.html"><strong aria-hidden="true">1.4.2.3.</strong> 过滤器</a></li><li class="chapter-item expanded "><a href="learn/vue/Chapter4.html"><strong aria-hidden="true">1.4.2.4.</strong> 路由</a></li></ol></li></ol></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="Intro.html"><strong aria-hidden="true">1.</strong> 我的笔记</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tool-usage/Intro.html"><strong aria-hidden="true">1.1.</strong> 工具</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tool-usage/Chapter1.html"><strong aria-hidden="true">1.1.1.</strong> Powershell</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter2.html"><strong aria-hidden="true">1.1.2.</strong> Git</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter3.html"><strong aria-hidden="true">1.1.3.</strong> Docker</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter4.html"><strong aria-hidden="true">1.1.4.</strong> wireguard</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter5.html"><strong aria-hidden="true">1.1.5.</strong> vim</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter6.html"><strong aria-hidden="true">1.1.6.</strong> qBittorent</a></li></ol></li><li class="chapter-item expanded "><a href="web-develop/Intro.html"><strong aria-hidden="true">1.2.</strong> 搭建</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="web-develop/Chapter1.html"><strong aria-hidden="true">1.2.1.</strong> mdbook</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter2.html"><strong aria-hidden="true">1.2.2.</strong> react</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter3.html"><strong aria-hidden="true">1.2.3.</strong> openwrt</a></li></ol></li><li class="chapter-item expanded "><a href="linux/Intro.html"><strong aria-hidden="true">1.3.</strong> linux</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="linux/Chapter1.html"><strong aria-hidden="true">1.3.1.</strong> linux</a></li><li class="chapter-item expanded "><a href="linux/Chapter2.html"><strong aria-hidden="true">1.3.2.</strong> vim</a></li><li class="chapter-item expanded "><a href="linux/Chapter3.html"><strong aria-hidden="true">1.3.3.</strong> Git</a></li></ol></li><li class="chapter-item expanded "><a href="learn/Intro.html"><strong aria-hidden="true">1.4.</strong> learn</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/react/Intro.html"><strong aria-hidden="true">1.4.1.</strong> react</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/react/Chapter1.html"><strong aria-hidden="true">1.4.1.1.</strong> 组件分类</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter2.html"><strong aria-hidden="true">1.4.1.2.</strong> jsx语法</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter3.html"><strong aria-hidden="true">1.4.1.3.</strong> 事件绑定</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter4.html"><strong aria-hidden="true">1.4.1.4.</strong> 响应式数据</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter5.html"><strong aria-hidden="true">1.4.1.5.</strong> 条件渲染和列表循环</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter6.html"><strong aria-hidden="true">1.4.1.6.</strong> 表单绑定</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter7.html"><strong aria-hidden="true">1.4.1.7.</strong> props和组件间传值插槽</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter8.html"><strong aria-hidden="true">1.4.1.8.</strong> 样式操作</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter9.html"><strong aria-hidden="true">1.4.1.9.</strong> 生命周期</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter10.html"><strong aria-hidden="true">1.4.1.10.</strong> -ref和context</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter11.html"><strong aria-hidden="true">1.4.1.11.</strong> 函数组件和hooks</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter12.html"><strong aria-hidden="true">1.4.1.12.</strong> 高阶组件</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter13.html"><strong aria-hidden="true">1.4.1.13.</strong> 性能问题和优化</a></li></ol></li><li class="chapter-item expanded "><a href="learn/vue/Intro.html"><strong aria-hidden="true">1.4.2.</strong> vue</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/vue/Chapter1.html"><strong aria-hidden="true">1.4.2.1.</strong> 组件</a></li><li class="chapter-item expanded "><a href="learn/vue/Chapter2.html"><strong aria-hidden="true">1.4.2.2.</strong> 指令</a></li><li class="chapter-item expanded "><a href="learn/vue/Chapter3.html"><strong aria-hidden="true">1.4.2.3.</strong> 过滤器</a></li><li class="chapter-item expanded "><a href="learn/vue/Chapter4.html"><strong aria-hidden="true">1.4.2.4.</strong> 路由</a></li></ol></li></ol></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -175,6 +175,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="我的笔记"><a class="header" href="#我的笔记">我的笔记</a></h1>
+<p>记录学习的内容。</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="tool-use"><a class="header" href="#tool-use">tool use</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="powershell"><a class="header" href="#powershell">Powershell</a></h1>
 <h2 id="一开启-powershell"><a class="header" href="#一开启-powershell">一.开启 powershell</a></h2>
@@ -1654,7 +1655,7 @@ export default App;
 </code></pre>
 <h2 id="其他一些hook"><a class="header" href="#其他一些hook">其他一些hook</a></h2>
 <p><strong>useRef:</strong> 获取dom节点,函数组件中使用ref</p>
-<p>**useContext:**更方便的解析context的provider的数据</p>
+<p><strong>useContext:</strong> 更方便的解析context的provider的数据</p>
 <pre><code class="language-jsx">import { useContext } from &quot;react&quot;;
 import { Context1 } from &quot;./App&quot;;
 function Son() {
@@ -1668,7 +1669,69 @@ export default Son;
 <h2 id="总结"><a class="header" href="#总结">总结</a></h2>
 <p><code>useMemo</code>,<code>useEffect</code>,<code>useCallback</code> 第二个参数的作用都是有意义的</p>
 <p>Hook还有很多，hook只能用于函数组件中，不能用于类组件中。</p>
-<div style="break-before: page; page-break-before: always;"></div><div style="break-before: page; page-break-before: always;"></div><div style="break-before: page; page-break-before: always;"></div><div style="break-before: page; page-break-before: always;"></div><div style="break-before: page; page-break-before: always;"></div><div style="break-before: page; page-break-before: always;"></div><div style="break-before: page; page-break-before: always;"></div><h1 id="vue"><a class="header" href="#vue">vue</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="高阶组件"><a class="header" href="#高阶组件">高阶组件</a></h1>
+<p><strong>逻辑复用：</strong> 如果是UI内推和操作的复用我们会使用组件，但是如果是逻辑复用，比如一个组件需要实现多个功能，我们就需要使用高阶组件。</p>
+<p><code>TestHoc.js</code></p>
+<pre><code class="language-jsx">import React from 'react';
+export default function TectHoc(UserCom) {
+    return class extends React.Component {
+        state = {
+            x: 0,
+            y: 0
+        }
+
+        componentDidMount() {
+            window.addEventListener(&quot;mousemove&quot;, (e) =&gt; {
+                let x = e.clientX;
+                let y = e.clientY;
+                this.setState({
+                    x: x,
+                    y: y
+                })
+            })
+        }
+
+        render() {
+            return &lt;&gt;
+                &lt; UserCom x={this.state.x} y={this.state.y} {...this.props}&gt;&lt;/UserCom &gt;
+            &lt;/&gt;
+        }
+    }
+}
+</code></pre>
+<p>Son.js</p>
+<pre><code class="language-jsx">function Son(props) {
+    return &lt;div&gt;X: {props.x} Y: {props.y}&lt;/div&gt;
+}
+export default Son; 
+</code></pre>
+<p>App.js</p>
+<pre><code class="language-jsx">import TestHoc from &quot;./TestHoc&quot;;
+import Son from &quot;./Son.js&quot;;
+let HocSon = TestHoc(Son);
+function App() {
+  return &lt;div&gt;
+    &lt;HocSon&gt;&lt;/HocSon&gt;
+  &lt;/div&gt;
+}
+
+export default App;
+</code></pre>
+<p>这样就可以监看鼠标的位置了。</p>
+<p><strong>什么时候用高阶组件：</strong></p>
+<ol>
+<li>组件既是包含了UI界面的复用，也包含了逻辑的复用</li>
+<li>高阶组件：高阶组件只是操作逻辑变化才需要使用</li>
+</ol>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="react的性能问题和优化"><a class="header" href="#react的性能问题和优化">React的性能问题和优化</a></h1>
+<p>React最大的性能问题就是某个组建的更新会连带着，子组件一起更新。</p>
+<p>虚拟dom对比和计算绘画很大时间，这样会阻塞浏览器的工作，react的方案是使用--时间切片，先计算一部分更新，再让渡给浏览器渲染。</p>
+<p><strong>React渲染逻辑</strong></p>
+<p><img src="learn/react/./images/react%E8%BF%90%E8%A1%8C%E7%9A%84%E9%80%BB%E8%BE%91.png" alt="React渲染逻辑" /></p>
+<p><strong>fiber</strong></p>
+<p>为了支持这种切片，我们需要把更新化成一个个单元，然后我们也必须有回复上一次计算进度的能力。</p>
+<p>所以react设计一种数据结构--fiber，它是一种树结构，每个节点代表一个更新单元，它包含了组件的类型、props、state、context、hooks等信息。</p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="vue"><a class="header" href="#vue">vue</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="组件"><a class="header" href="#组件">组件</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="指令"><a class="header" href="#指令">指令</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="过滤器"><a class="header" href="#过滤器">过滤器</a></h1>
