--- a/print.html
+++ b/print.html
@@ -1319,9 +1319,7 @@ Son.defaultProps = {
           }}&gt;father
 &lt;/div&gt;
 </code></pre>
-<ol>
-<li>如何做到组件专用CSS</li>
-</ol>
+<p><strong>1. 如何做到组件专用CSS</strong></p>
 <p>新建一个<code>.module.css</code>文件，然后在组件里导入，然后在style里用className来引用。</p>
 <pre><code class="language-jsx">import React from 'react';
 import sonStyle from './Son.module.css';
@@ -1346,9 +1344,7 @@ export default Son;
     color: blue
 }
 </code></pre>
-<ol start="2">
-<li>如何更舒服的控制类名的添加和减少</li>
-</ol>
+<p><strong>2. 如何更舒服的控制类名的添加和减少</strong></p>
 <p>普通的方式，不借助第三方库</p>
 <pre><code class="language-jsx">class Son extends React.Component {
     state = {
@@ -1404,12 +1400,10 @@ class Son extends React.Component {
 export default Son;
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="生命周期"><a class="header" href="#生命周期">生命周期</a></h1>
-<p>react组件的生命周期可以分为三个阶段：</p>
-<ol>
-<li>挂载阶段：组件被创建并插入到DOM中，此时组件的状态是未知的，组件的属性和状态都可以被设置。</li>
-<li>更新阶段：组件的状态发生变化，组件需要重新渲染，此时组件的属性和状态都可以被更新。</li>
-<li>卸载阶段：组件从DOM中移除，此时组件的状态也会被销毁。</li>
-</ol>
+<p><strong>react组件的生命周期可以分为三个阶段：</strong></p>
+<p><strong>1. 挂载阶段：</strong> 组件被创建并插入到DOM中，此时组件的状态是未知的，组件的属性和状态都可以被设置。
+<strong>2. 更新阶段：</strong> 组件的状态发生变化，组件需要重新渲染，此时组件的属性和状态都可以被更新。
+<strong>3. 卸载阶段：</strong> 组件从DOM中移除，此时组件的状态也会被销毁。</p>
 <p><img src="learn/react/./images/react%E7%94%9F%E5%91%BD%E5%91%A8%E6%9C%9F.png" alt="rect-lifecycle" /></p>
 <pre><code class="language-js">constructor(props)
 </code></pre>
@@ -1417,7 +1411,7 @@ export default Son;
 <pre><code class="language-js">render()
 </code></pre>
 <p>一个很重要的生命周期，它返回一个React元素，描述了组件在屏幕上应该呈现的内容。</p>
-<p>传入props,setState(),forceUpdate()等方法可以触发更新。</p>
+<p>传入<code>props,setState()</code>,<code>forceUpdate()</code>等方法可以触发更新。</p>
 <pre><code class="language-js">shouldComponentUpdate()
 </code></pre>
 <p>一个函数，在组件接收到新的props或state时，会调用这个函数，用来判断是否需要更新组件。通常在render之前</p>
@@ -1466,10 +1460,8 @@ export default App;
 <p><strong>componentWillUnmount:</strong> 组件卸载前触发，一般在这里做一些清理工作，比如清除定时器，取消网络请求等</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="-ref-和-context"><a class="header" href="#-ref-和-context">-ref 和 context</a></h1>
 <p>**ref：**用于获取真实dom</p>
-<ol>
-<li>ref必须在挂载后才能获取，通常在componentDidMount中获取</li>
-<li>ref获取组件，不能获取函数组件</li>
-</ol>
+<p><strong>1. ref必须在挂载后才能获取，通常在componentDidMount中获取</strong>
+<strong>2. ref获取组件，不能获取函数组件</strong></p>
 <pre><code class="language-jsx">import './App.css';
 import React from 'react';
 import Son from './Son.js';
@@ -1513,11 +1505,9 @@ class Son extends React.Component {
 }
 export default Son; 
 </code></pre>
-<p>**context：**用于嵌套很深的爷孙组件之间context共享数据</p>
-<ol>
-<li>子组件使用父组件创建的context对象，不能自己创建
-App.jsx</li>
-</ol>
+<p><strong>context：</strong> 用于嵌套很深的爷孙组件之间context共享数据</p>
+<p><strong>1. 子组件使用父组件创建的context对象，不能自己创建</strong></p>
+<p><strong>App.jsx</strong></p>
 <pre><code class="language-jsx">import './App.css';
 import React from 'react';
 import Son from './Son.js';
@@ -1542,7 +1532,7 @@ class App extends React.PureComponent {
 
 export default App;   
 </code></pre>
-<p>GrandSon.jsx</p>
+<p><strong>GrandSon.jsx</strong></p>
 <pre><code class="language-jsx">import React from 'react';
 import { Context1 } from './App';
 class GrandSon extends React.Component {
@@ -1578,7 +1568,7 @@ export default GrandSon;
 <li>函数组件本身的函数体相当于render函数</li>
 <li>props在函数的第一个参数接受</li>
 </ol>
-<p>相当于render函数，return 的内容相当于组件的html</p>
+<p><strong>相当于render函数，return 的内容相当于组件的html</strong></p>
 <h2 id="一state的创建和更新"><a class="header" href="#一state的创建和更新">一.state的创建和更新</a></h2>
 <p><img src="learn/react/./images/state%E7%9A%84%E5%88%9B%E5%BB%BA%E5%92%8C%E6%9B%B4%E6%96%B0.png" alt="state的创建和更新" /></p>
 <pre><code class="language-jsx">import { useState } from &quot;react&quot;;
@@ -1665,13 +1655,13 @@ function Son() {
 }
 export default Son;
 </code></pre>
-<p>函数组件中传递context数据，需要用到<code>useContext</code></p>
+<p><strong>函数组件中传递context数据，需要用到<code>useContext</code></strong></p>
 <h2 id="总结"><a class="header" href="#总结">总结</a></h2>
 <p><code>useMemo</code>,<code>useEffect</code>,<code>useCallback</code> 第二个参数的作用都是有意义的</p>
 <p>Hook还有很多，hook只能用于函数组件中，不能用于类组件中。</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="高阶组件"><a class="header" href="#高阶组件">高阶组件</a></h1>
 <p><strong>逻辑复用：</strong> 如果是UI内推和操作的复用我们会使用组件，但是如果是逻辑复用，比如一个组件需要实现多个功能，我们就需要使用高阶组件。</p>
-<p><code>TestHoc.js</code></p>
+<p><strong>TestHoc.js</strong></p>
 <pre><code class="language-jsx">import React from 'react';
 export default function TectHoc(UserCom) {
     return class extends React.Component {
@@ -1699,7 +1689,7 @@ export default function TectHoc(UserCom) {
     }
 }
 </code></pre>
-<p>Son.js</p>
+<p><strong>Son.js</strong></p>
 <pre><code class="language-jsx">function Son(props) {
     return &lt;div&gt;X: {props.x} Y: {props.y}&lt;/div&gt;
 }
