--- a/print.html
+++ b/print.html
@@ -89,7 +89,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="Intro.html"><strong aria-hidden="true">1.</strong> 我的笔记</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tool-usage/Intro.html"><strong aria-hidden="true">1.1.</strong> 工具</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tool-usage/Chapter1.html"><strong aria-hidden="true">1.1.1.</strong> Powershell</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter2.html"><strong aria-hidden="true">1.1.2.</strong> Git</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter3.html"><strong aria-hidden="true">1.1.3.</strong> Docker</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter4.html"><strong aria-hidden="true">1.1.4.</strong> wireguard</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter5.html"><strong aria-hidden="true">1.1.5.</strong> vim</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter6.html"><strong aria-hidden="true">1.1.6.</strong> qBittorent</a></li></ol></li><li class="chapter-item expanded "><a href="web-develop/Intro.html"><strong aria-hidden="true">1.2.</strong> 搭建</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="web-develop/Chapter1.html"><strong aria-hidden="true">1.2.1.</strong> mdbook</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter2.html"><strong aria-hidden="true">1.2.2.</strong> react</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter3.html"><strong aria-hidden="true">1.2.3.</strong> openwrt</a></li></ol></li><li class="chapter-item expanded "><a href="linux/Intro.html"><strong aria-hidden="true">1.3.</strong> linux</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="linux/Chapter1.html"><strong aria-hidden="true">1.3.1.</strong> linux</a></li><li class="chapter-item expanded "><a href="linux/Chapter2.html"><strong aria-hidden="true">1.3.2.</strong> vim</a></li><li class="chapter-item expanded "><a href="linux/Chapter3.html"><strong aria-hidden="true">1.3.3.</strong> Git</a></li></ol></li><li class="chapter-item expanded "><a href="learn/Intro.html"><strong aria-hidden="true">1.4.</strong> learn</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/react/Intro.html"><strong aria-hidden="true">1.4.1.</strong> react</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/react/Chapter1.html"><strong aria-hidden="true">1.4.1.1.</strong> 组件分类</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter2.html"><strong aria-hidden="true">1.4.1.2.</strong> jsx语法</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter3.html"><strong aria-hidden="true">1.4.1.3.</strong> 事件绑定</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter4.html"><strong aria-hidden="true">1.4.1.4.</strong> 响应式数据</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter5.html"><strong aria-hidden="true">1.4.1.5.</strong> 条件渲染和列表循环</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter6.html"><strong aria-hidden="true">1.4.1.6.</strong> 表单绑定</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter7.html"><strong aria-hidden="true">1.4.1.7.</strong> props和组件间传值插槽</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter8.html"><strong aria-hidden="true">1.4.1.8.</strong> 样式操作</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter9.html"><strong aria-hidden="true">1.4.1.9.</strong> 生命周期</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter10.html"><strong aria-hidden="true">1.4.1.10.</strong> -ref和context</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter11.html"><strong aria-hidden="true">1.4.1.11.</strong> 函数组件和hooks</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter12.html"><strong aria-hidden="true">1.4.1.12.</strong> 高阶组件</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter13.html"><strong aria-hidden="true">1.4.1.13.</strong> 性能问题和优化</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter14.html"><strong aria-hidden="true">1.4.1.14.</strong> -router的使用</a></li></ol></li><li class="chapter-item expanded "><a href="learn/vue/Intro.html"><strong aria-hidden="true">1.4.2.</strong> vue</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/vue/Chapter1.html"><strong aria-hidden="true">1.4.2.1.</strong> 组件</a></li><li class="chapter-item expanded "><a href="learn/vue/Chapter2.html"><strong aria-hidden="true">1.4.2.2.</strong> 指令</a></li><li class="chapter-item expanded "><a href="learn/vue/Chapter3.html"><strong aria-hidden="true">1.4.2.3.</strong> 过滤器</a></li><li class="chapter-item expanded "><a href="learn/vue/Chapter4.html"><strong aria-hidden="true">1.4.2.4.</strong> 路由</a></li></ol></li></ol></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="Intro.html"><strong aria-hidden="true">1.</strong> 我的笔记</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tool-usage/Intro.html"><strong aria-hidden="true">1.1.</strong> 工具</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tool-usage/Chapter1.html"><strong aria-hidden="true">1.1.1.</strong> Powershell</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter2.html"><strong aria-hidden="true">1.1.2.</strong> Git</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter3.html"><strong aria-hidden="true">1.1.3.</strong> Docker</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter4.html"><strong aria-hidden="true">1.1.4.</strong> wireguard</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter5.html"><strong aria-hidden="true">1.1.5.</strong> vim</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter6.html"><strong aria-hidden="true">1.1.6.</strong> oh-my-posh</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter7.html"><strong aria-hidden="true">1.1.7.</strong> nano</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter8.html"><strong aria-hidden="true">1.1.8.</strong> nodejs</a></li></ol></li><li class="chapter-item expanded "><a href="web-develop/Intro.html"><strong aria-hidden="true">1.2.</strong> 搭建</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="web-develop/Chapter1.html"><strong aria-hidden="true">1.2.1.</strong> mdbook</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter2.html"><strong aria-hidden="true">1.2.2.</strong> react</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter3.html"><strong aria-hidden="true">1.2.3.</strong> openwrt</a></li></ol></li><li class="chapter-item expanded "><a href="linux/Intro.html"><strong aria-hidden="true">1.3.</strong> linux</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="linux/Chapter1.html"><strong aria-hidden="true">1.3.1.</strong> linux</a></li><li class="chapter-item expanded "><a href="linux/Chapter2.html"><strong aria-hidden="true">1.3.2.</strong> vim</a></li><li class="chapter-item expanded "><a href="linux/Chapter3.html"><strong aria-hidden="true">1.3.3.</strong> Git</a></li><li class="chapter-item expanded "><a href="linux/Chapter4.html"><strong aria-hidden="true">1.3.4.</strong> qbitorrent</a></li></ol></li><li class="chapter-item expanded "><a href="learn/Intro.html"><strong aria-hidden="true">1.4.</strong> learn</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/react/Intro.html"><strong aria-hidden="true">1.4.1.</strong> react</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/react/Chapter1.html"><strong aria-hidden="true">1.4.1.1.</strong> 组件分类</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter2.html"><strong aria-hidden="true">1.4.1.2.</strong> jsx语法</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter3.html"><strong aria-hidden="true">1.4.1.3.</strong> 事件绑定</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter4.html"><strong aria-hidden="true">1.4.1.4.</strong> 响应式数据</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter5.html"><strong aria-hidden="true">1.4.1.5.</strong> 条件渲染和列表循环</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter6.html"><strong aria-hidden="true">1.4.1.6.</strong> 表单绑定</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter7.html"><strong aria-hidden="true">1.4.1.7.</strong> props和组件间传值插槽</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter8.html"><strong aria-hidden="true">1.4.1.8.</strong> 样式操作</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter9.html"><strong aria-hidden="true">1.4.1.9.</strong> 生命周期</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter10.html"><strong aria-hidden="true">1.4.1.10.</strong> -ref和context</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter11.html"><strong aria-hidden="true">1.4.1.11.</strong> 函数组件和hooks</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter12.html"><strong aria-hidden="true">1.4.1.12.</strong> 高阶组件</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter13.html"><strong aria-hidden="true">1.4.1.13.</strong> 性能问题和优化</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter14.html"><strong aria-hidden="true">1.4.1.14.</strong> -router的使用</a></li></ol></li><li class="chapter-item expanded "><a href="learn/vue/Intro.html"><strong aria-hidden="true">1.4.2.</strong> vue</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/vue/Chapter1.html"><strong aria-hidden="true">1.4.2.1.</strong> 组件</a></li><li class="chapter-item expanded "><a href="learn/vue/Chapter2.html"><strong aria-hidden="true">1.4.2.2.</strong> 指令</a></li><li class="chapter-item expanded "><a href="learn/vue/Chapter3.html"><strong aria-hidden="true">1.4.2.3.</strong> 过滤器</a></li><li class="chapter-item expanded "><a href="learn/vue/Chapter4.html"><strong aria-hidden="true">1.4.2.4.</strong> 路由</a></li></ol></li></ol></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -624,6 +624,23 @@ Endpoint = 114.132.56.178:50814 #服务器对端IP+端口
 <pre><code class="language-sh">winget search vim
 winget install vim.vim
 </code></pre>
+<h2 id="配置"><a class="header" href="#配置">配置</a></h2>
+<pre><code class="language-sh">vim ~/.vimrc
+</code></pre>
+<p>添加以下内容：</p>
+<pre><code class="language-sh">syntax on
+
+set number
+set autoindent
+set tabstop=4
+set shiftwidth=4
+set expandtab
+set smartindent
+set backspace=2
+set incsearch
+set hlsearch
+set ruler
+</code></pre>
 <h2 id="vim-键盘图"><a class="header" href="#vim-键盘图">vim 键盘图</a></h2>
 <p><img src="tool-usage/./images/vim.png" alt="vim graphical cheat sheet" /></p>
 <h2 id="命令模式"><a class="header" href="#命令模式">命令模式</a></h2>
@@ -665,45 +682,69 @@ winget install vim.vim
 <h2 id="输入模式"><a class="header" href="#输入模式">输入模式</a></h2>
 <p>输入时比较符合直觉</p>
 <p><code>ESC</code>:退出输入模式</p>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="qbittorent"><a class="header" href="#qbittorent">qBittorent</a></h1>
-<h2 id="安装-qbittorent"><a class="header" href="#安装-qbittorent">安装 qBittorent</a></h2>
-<p>Ubuntu 或者 Debian:</p>
-<pre><code class="language-sh">apt install -y qbittorrent-nox
+<div style="break-before: page; page-break-before: always;"></div><h1 id="oh-my-posh"><a class="header" href="#oh-my-posh">Oh my posh</a></h1>
+<h3 id="基础配置"><a class="header" href="#基础配置">基础配置</a></h3>
+<p><strong>安装</strong></p>
+<pre><code class="language-sh">winget install JanDeDobbeleer.OhMyPosh -s winget
 </code></pre>
-<p>CentOS:</p>
-<pre><code class="language-sh">yum install -y qbittorrent-nox
+<p><strong>添加到环境变量</strong></p>
+<pre><code class="language-sh">$env:Path += &quot;;C:\Users\user\AppData\Local\Programs\oh-my-posh\bin&quot;
 </code></pre>
-<h2 id="启动"><a class="header" href="#启动">启动</a></h2>
-<p>安装完成后启动 qBittorrent：</p>
-<pre><code class="language-sh">qbittorrent-nox
+<p><strong>更新</strong></p>
+<pre><code class="language-sh">winget upgrade JanDeDobbeleer.OhMyPosh -s winget
 </code></pre>
-<p>访问地址、用户名、密码：</p>
-<pre><code class="language-sh">******** Information ********
-To control qBittorrent, access the Web UI at http://localhost:8080
-The Web UI administrator user name is: admin
-The Web UI administrator password is still the default one: adminadmin
-This is a security risk, please consider changing your password from program preferences
+<h3 id="主题配置"><a class="header" href="#主题配置">主题配置</a></h3>
+<pre><code class="language-sh">oh-my-posh init pwsh --config $env:POSH_THEMES_PATH\&lt;theme.omp.json&gt; | Invoke-Expression
 </code></pre>
-<p>让 qBittorrent 启动后在后台运行可以输入：</p>
-<pre><code class="language-sh">qbittorrent-nox -d
+<p><strong>如果要在全局生效, 那么我们需要在 $PROFILE 文件中写入该值:</strong></p>
+<pre><code class="language-sh">nano C:\Users\&lt;username&gt;\Documents\PowerShell\Microsoft.PowerShell_profile.ps1
 </code></pre>
-<h2 id="常用命令"><a class="header" href="#常用命令">常用命令</a></h2>
-<p>启动 qBittorrent：</p>
-<pre><code class="language-sh">qbittorrent-nox
+<p>添加上面的命令, 然后重启 PowerShell 即可生效.</p>
+<h3 id="主题列表"><a class="header" href="#主题列表">主题列表</a></h3>
+<ul>
+<li><a href="https://github.com/JanDeDobbeleer/oh-my-posh/blob/main/themes/agnosterplus.omp.json">agnosterplus</a>
+<img src="tool-usage/./images/agnoster.png" alt="agnosterplus" /></li>
+<li><a href="https://github.com/JanDeDobbeleer/oh-my-posh/blob/main/themes/aliens.omp.json">aliens</a>
+<img src="tool-usage/./images/aliens.png" alt="aliens" /></li>
+<li><a href="https://github.com/JanDeDobbeleer/oh-my-posh/blob/main/themes/amro.omp.json">amro</a>
+<img src="tool-usage/./images/amro.png" alt="amro" /></li>
+<li><a href="https://github.com/JanDeDobbeleer/oh-my-posh/blob/main/themes/catppuccin_frappe.omp.json">catppuccin</a>
+<img src="tool-usage/./images/catppuccin_frappe.png" alt="catppuccin" /></li>
+</ul>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="nano"><a class="header" href="#nano">nano</a></h1>
+<p><strong>windows安装nano</strong></p>
+<pre><code class="language-sh">winget search nano
+winget install okibcn.nano
 </code></pre>
-<p>在后台启动 qBittorrent：</p>
-<pre><code class="language-sh">qbittorrent-nox -d
+<p>常用快捷键:</p>
+<ol>
+<li><code>Ctrl + O</code> 打开文件</li>
+<li><code>Ctrl + X</code> 关闭文件</li>
+<li><code>Ctrl + S</code> 保存文件</li>
+<li><code>Ctrl + G</code> 移动到指定行</li>
+<li><code>Ctrl + K</code> 删除从光标到行尾的内容</li>
+<li><code>Ctrl + U</code> 撤销上一次操作</li>
+<li><code>Ctrl + H</code> 删除光标前一个字符</li>
+<li><code>Ctrl + W</code> 删除光标前一个单词</li>
+<li><code>Ctrl + Y</code> 恢复删除的内容</li>
+</ol>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="node-js"><a class="header" href="#node-js">node-js</a></h1>
+<h3 id="安装"><a class="header" href="#安装">安装</a></h3>
+<pre><code class="language-sh">winget install Schniz.fnm
+fnm env --use-on-cd | Out-String | Invoke-Expression
+fnm use --install-if-missing 20
+node -v # 应该打印 `v20.18.0`
+npm -v # 应该打印 `10.8.2`】
 </code></pre>
-<p>查看版本：</p>
-<pre><code class="language-sh">qbittorrent-nox -v
+<h3 id="配置-1"><a class="header" href="#配置-1">配置</a></h3>
+<pre><code class="language-sh"> $PROFILE # 查看配置文件目录
 </code></pre>
-<p>启动 qBittorrent 并指定 Web 面板的端口：</p>
-<pre><code class="language-sh">qbittorrent-nox --webui-port=2333
+<pre><code class="language-sh">nano C:\Users\&lt;username&gt;\Documents\PowerShell\Microsoft.PowerShell_profile.ps1
 </code></pre>
-<p>上面指定 2333 端口。</p>
-<p>查看帮助：</p>
-<pre><code class="language-sh">qbittorrent-nox -h
+<p>添加以下内容：</p>
+<pre><code class="language-powershell">fnm env --use-on-cd | Out-String | Invoke-Expression
 </code></pre>
+<p>保存并退出，然后重启 PowerShell 即可。</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="build"><a class="header" href="#build">build</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="mdbook"><a class="header" href="#mdbook">mdbook</a></h1>
 <ol>
@@ -784,7 +825,7 @@ This is a security risk, please consider changing your password from program pre
 sudo apt full-upgrade
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="linux"><a class="header" href="#linux">linux</a></h1>
-<h2 id="常用命令-1"><a class="header" href="#常用命令-1">常用命令</a></h2>
+<h2 id="常用命令"><a class="header" href="#常用命令">常用命令</a></h2>
 <ol>
 <li>以 root 权限执行</li>
 </ol>
@@ -824,10 +865,63 @@ cp #复制目录
 <pre><code class="language-sh">reboot
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="vim-1"><a class="header" href="#vim-1">vim</a></h1>
+<h3 id="安装vim"><a class="header" href="#安装vim">安装vim</a></h3>
+<pre><code class="language-sh">sudo apt-get install vim -y
+</code></pre>
+<h3 id="基本操作"><a class="header" href="#基本操作">基本操作</a></h3>
+<ul>
+<li>打开文件：<code>vim &lt;filename&gt;</code></li>
+<li>保存文件：<code>:w</code></li>
+<li>退出文件：<code>:q</code></li>
+<li>强制退出文件：<code>:q!</code></li>
+<li>保存并退出文件：<code>:wq</code></li>
+<li>打开上一个文件：<code>:e #</code></li>
+<li>打开下一个文件：<code>:e #</code></li>
+<li>显示行号：<code>:set number</code>    </li>
+</ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="git-1"><a class="header" href="#git-1">git</a></h1>
 <h2 id="下载-git"><a class="header" href="#下载-git">下载 git</a></h2>
 <pre><code class="language-sh">sudo apt update
 sudo apt install git
+</code></pre>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="qbittorent"><a class="header" href="#qbittorent">qBittorent</a></h1>
+<h2 id="安装-qbittorent"><a class="header" href="#安装-qbittorent">安装 qBittorent</a></h2>
+<p>Ubuntu 或者 Debian:</p>
+<pre><code class="language-sh">apt install -y qbittorrent-nox
+</code></pre>
+<p>CentOS:</p>
+<pre><code class="language-sh">yum install -y qbittorrent-nox
+</code></pre>
+<h2 id="启动"><a class="header" href="#启动">启动</a></h2>
+<p>安装完成后启动 qBittorrent：</p>
+<pre><code class="language-sh">qbittorrent-nox
+</code></pre>
+<p>访问地址、用户名、密码：</p>
+<pre><code class="language-sh">******** Information ********
+To control qBittorrent, access the Web UI at http://localhost:8080
+The Web UI administrator user name is: admin
+The Web UI administrator password is still the default one: adminadmin
+This is a security risk, please consider changing your password from program preferences
+</code></pre>
+<p>让 qBittorrent 启动后在后台运行可以输入：</p>
+<pre><code class="language-sh">qbittorrent-nox -d
+</code></pre>
+<h2 id="常用命令-1"><a class="header" href="#常用命令-1">常用命令</a></h2>
+<p>启动 qBittorrent：</p>
+<pre><code class="language-sh">qbittorrent-nox
+</code></pre>
+<p>在后台启动 qBittorrent：</p>
+<pre><code class="language-sh">qbittorrent-nox -d
+</code></pre>
+<p>查看版本：</p>
+<pre><code class="language-sh">qbittorrent-nox -v
+</code></pre>
+<p>启动 qBittorrent 并指定 Web 面板的端口：</p>
+<pre><code class="language-sh">qbittorrent-nox --webui-port=2333
+</code></pre>
+<p>上面指定 2333 端口。</p>
+<p>查看帮助：</p>
+<pre><code class="language-sh">qbittorrent-nox -h
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="learn"><a class="header" href="#learn">learn</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="react-1"><a class="header" href="#react-1">react</a></h1>
