--- a/print.html
+++ b/print.html
@@ -89,7 +89,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="Intro.html"><strong aria-hidden="true">1.</strong> 我的笔记</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tool-usage/Intro.html"><strong aria-hidden="true">1.1.</strong> 工具</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tool-usage/Chapter1.html"><strong aria-hidden="true">1.1.1.</strong> Powershell</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter2.html"><strong aria-hidden="true">1.1.2.</strong> Git</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter3.html"><strong aria-hidden="true">1.1.3.</strong> Docker</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter4.html"><strong aria-hidden="true">1.1.4.</strong> wireguard</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter5.html"><strong aria-hidden="true">1.1.5.</strong> vim</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter6.html"><strong aria-hidden="true">1.1.6.</strong> oh-my-posh</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter7.html"><strong aria-hidden="true">1.1.7.</strong> nano</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter8.html"><strong aria-hidden="true">1.1.8.</strong> nodejs</a></li></ol></li><li class="chapter-item expanded "><a href="web-develop/Intro.html"><strong aria-hidden="true">1.2.</strong> 搭建</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="web-develop/Chapter1.html"><strong aria-hidden="true">1.2.1.</strong> mdbook</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter2.html"><strong aria-hidden="true">1.2.2.</strong> react</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter3.html"><strong aria-hidden="true">1.2.3.</strong> openwrt</a></li></ol></li><li class="chapter-item expanded "><a href="linux/Intro.html"><strong aria-hidden="true">1.3.</strong> linux</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="linux/Chapter1.html"><strong aria-hidden="true">1.3.1.</strong> linux</a></li><li class="chapter-item expanded "><a href="linux/Chapter2.html"><strong aria-hidden="true">1.3.2.</strong> vim</a></li><li class="chapter-item expanded "><a href="linux/Chapter3.html"><strong aria-hidden="true">1.3.3.</strong> Git</a></li><li class="chapter-item expanded "><a href="linux/Chapter4.html"><strong aria-hidden="true">1.3.4.</strong> qbitorrent</a></li></ol></li><li class="chapter-item expanded "><a href="learn/Intro.html"><strong aria-hidden="true">1.4.</strong> learn</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/react/Intro.html"><strong aria-hidden="true">1.4.1.</strong> react</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/react/Chapter1.html"><strong aria-hidden="true">1.4.1.1.</strong> 组件分类</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter2.html"><strong aria-hidden="true">1.4.1.2.</strong> jsx语法</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter3.html"><strong aria-hidden="true">1.4.1.3.</strong> 事件绑定</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter4.html"><strong aria-hidden="true">1.4.1.4.</strong> 响应式数据</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter5.html"><strong aria-hidden="true">1.4.1.5.</strong> 条件渲染和列表循环</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter6.html"><strong aria-hidden="true">1.4.1.6.</strong> 表单绑定</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter7.html"><strong aria-hidden="true">1.4.1.7.</strong> props和组件间传值插槽</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter8.html"><strong aria-hidden="true">1.4.1.8.</strong> 样式操作</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter9.html"><strong aria-hidden="true">1.4.1.9.</strong> 生命周期</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter10.html"><strong aria-hidden="true">1.4.1.10.</strong> -ref和context</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter11.html"><strong aria-hidden="true">1.4.1.11.</strong> 函数组件和hooks</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter12.html"><strong aria-hidden="true">1.4.1.12.</strong> 高阶组件</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter13.html"><strong aria-hidden="true">1.4.1.13.</strong> 性能问题和优化</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter14.html"><strong aria-hidden="true">1.4.1.14.</strong> -router的使用</a></li></ol></li><li class="chapter-item expanded "><a href="learn/vue/Intro.html"><strong aria-hidden="true">1.4.2.</strong> vue</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/vue/Chapter1.html"><strong aria-hidden="true">1.4.2.1.</strong> 组件</a></li><li class="chapter-item expanded "><a href="learn/vue/Chapter2.html"><strong aria-hidden="true">1.4.2.2.</strong> 指令</a></li><li class="chapter-item expanded "><a href="learn/vue/Chapter3.html"><strong aria-hidden="true">1.4.2.3.</strong> 过滤器</a></li><li class="chapter-item expanded "><a href="learn/vue/Chapter4.html"><strong aria-hidden="true">1.4.2.4.</strong> 路由</a></li></ol></li></ol></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="Intro.html"><strong aria-hidden="true">1.</strong> 我的笔记</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tool-usage/Intro.html"><strong aria-hidden="true">1.1.</strong> 工具</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tool-usage/Chapter1.html"><strong aria-hidden="true">1.1.1.</strong> Powershell</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter2.html"><strong aria-hidden="true">1.1.2.</strong> Git</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter3.html"><strong aria-hidden="true">1.1.3.</strong> Docker</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter4.html"><strong aria-hidden="true">1.1.4.</strong> wireguard</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter5.html"><strong aria-hidden="true">1.1.5.</strong> vim</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter6.html"><strong aria-hidden="true">1.1.6.</strong> oh-my-posh</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter7.html"><strong aria-hidden="true">1.1.7.</strong> nano</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter8.html"><strong aria-hidden="true">1.1.8.</strong> nodejs</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter9.html"><strong aria-hidden="true">1.1.9.</strong> winget</a></li></ol></li><li class="chapter-item expanded "><a href="web-develop/Intro.html"><strong aria-hidden="true">1.2.</strong> 搭建</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="web-develop/Chapter1.html"><strong aria-hidden="true">1.2.1.</strong> mdbook</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter2.html"><strong aria-hidden="true">1.2.2.</strong> react</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter3.html"><strong aria-hidden="true">1.2.3.</strong> openwrt</a></li></ol></li><li class="chapter-item expanded "><a href="linux/Intro.html"><strong aria-hidden="true">1.3.</strong> linux</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="linux/Chapter1.html"><strong aria-hidden="true">1.3.1.</strong> linux</a></li><li class="chapter-item expanded "><a href="linux/Chapter2.html"><strong aria-hidden="true">1.3.2.</strong> vim</a></li><li class="chapter-item expanded "><a href="linux/Chapter3.html"><strong aria-hidden="true">1.3.3.</strong> Git</a></li><li class="chapter-item expanded "><a href="linux/Chapter4.html"><strong aria-hidden="true">1.3.4.</strong> qbitorrent</a></li></ol></li><li class="chapter-item expanded "><a href="learn/Intro.html"><strong aria-hidden="true">1.4.</strong> learn</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/react/Intro.html"><strong aria-hidden="true">1.4.1.</strong> react</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/react/Chapter1.html"><strong aria-hidden="true">1.4.1.1.</strong> 组件分类</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter2.html"><strong aria-hidden="true">1.4.1.2.</strong> jsx语法</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter3.html"><strong aria-hidden="true">1.4.1.3.</strong> 事件绑定</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter4.html"><strong aria-hidden="true">1.4.1.4.</strong> 响应式数据</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter5.html"><strong aria-hidden="true">1.4.1.5.</strong> 条件渲染和列表循环</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter6.html"><strong aria-hidden="true">1.4.1.6.</strong> 表单绑定</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter7.html"><strong aria-hidden="true">1.4.1.7.</strong> props和组件间传值插槽</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter8.html"><strong aria-hidden="true">1.4.1.8.</strong> 样式操作</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter9.html"><strong aria-hidden="true">1.4.1.9.</strong> 生命周期</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter10.html"><strong aria-hidden="true">1.4.1.10.</strong> -ref和context</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter11.html"><strong aria-hidden="true">1.4.1.11.</strong> 函数组件和hooks</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter12.html"><strong aria-hidden="true">1.4.1.12.</strong> 高阶组件</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter13.html"><strong aria-hidden="true">1.4.1.13.</strong> 性能问题和优化</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter14.html"><strong aria-hidden="true">1.4.1.14.</strong> -router的使用</a></li></ol></li><li class="chapter-item expanded "><a href="learn/vue/Intro.html"><strong aria-hidden="true">1.4.2.</strong> vue</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/vue/Chapter1.html"><strong aria-hidden="true">1.4.2.1.</strong> 组件</a></li><li class="chapter-item expanded "><a href="learn/vue/Chapter2.html"><strong aria-hidden="true">1.4.2.2.</strong> 指令</a></li><li class="chapter-item expanded "><a href="learn/vue/Chapter3.html"><strong aria-hidden="true">1.4.2.3.</strong> 过滤器</a></li><li class="chapter-item expanded "><a href="learn/vue/Chapter4.html"><strong aria-hidden="true">1.4.2.4.</strong> 路由</a></li></ol></li></ol></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -175,7 +175,8 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="我的笔记"><a class="header" href="#我的笔记">我的笔记</a></h1>
-<p>记录学习的内容。</p>
+<p>苟日新，日日新，又日新。</p>
+<p>由于人的记忆力是有限的，所以我们应该记录自己常年积累的知识。</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="tool-use"><a class="header" href="#tool-use">tool use</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="powershell"><a class="header" href="#powershell">Powershell</a></h1>
 <h2 id="一开启-powershell"><a class="header" href="#一开启-powershell">一.开启 powershell</a></h2>
@@ -745,6 +746,100 @@ npm -v # 应该打印 `10.8.2`】
 <pre><code class="language-powershell">fnm env --use-on-cd | Out-String | Invoke-Expression
 </code></pre>
 <p>保存并退出，然后重启 PowerShell 即可。</p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="winget"><a class="header" href="#winget">winget</a></h1>
+<p>window提供的包管理工具，类似于apt-get、yum等。</p>
+<h3 id="更新"><a class="header" href="#更新">更新</a></h3>
+<ol>
+<li>查看winget源</li>
+</ol>
+<pre><code class="language-sh">winget source list
+</code></pre>
+<ol start="2">
+<li>更新源</li>
+</ol>
+<pre><code class="language-sh">winget source update
+</code></pre>
+<ol start="3">
+<li>更新软件</li>
+</ol>
+<pre><code class="language-sh">winget upgrade --all
+</code></pre>
+<h3 id="常用软件"><a class="header" href="#常用软件">常用软件</a></h3>
+<ul>
+<li>vscode</li>
+</ul>
+<pre><code class="language-sh">winget install --id Microsoft.VisualStudioCode
+</code></pre>
+<ul>
+<li>git</li>
+</ul>
+<pre><code class="language-sh">winget install --id Git.Git
+</code></pre>
+<ul>
+<li>chrome</li>
+</ul>
+<pre><code class="language-sh">winget install --id Google.Chrome
+</code></pre>
+<ul>
+<li>7zip</li>
+</ul>
+<pre><code class="language-sh">winget install --id 7zip.7zip
+</code></pre>
+<ul>
+<li>JLC EDA Pro</li>
+</ul>
+<pre><code class="language-sh">winget install --id JLC.LCEDA.Pro
+</code></pre>
+<ul>
+<li>arduino</li>
+</ul>
+<pre><code class="language-sh">winget install --id ArduinoSA.IDE.stable
+</code></pre>
+<ul>
+<li>bandizip</li>
+</ul>
+<pre><code class="language-sh">winget install --id Bandisoft.Bandizip
+</code></pre>
+<ul>
+<li>draw.io</li>
+</ul>
+<pre><code class="language-sh">winget install --id JGraph.Draw
+</code></pre>
+<ul>
+<li>obs-studio</li>
+</ul>
+<pre><code class="language-sh">winget install --id OBSProject.OBSStudio
+</code></pre>
+<ul>
+<li>telegram</li>
+</ul>
+<pre><code class="language-sh">winget install --id Telegram.TelegramDesktop
+</code></pre>
+<ul>
+<li>nano </li>
+</ul>
+<pre><code class="language-sh">winget install --id okibcn.nano
+</code></pre>
+<ul>
+<li>vim</li>
+</ul>
+<pre><code class="language-sh">winget install --id vim.vim
+</code></pre>
+<ul>
+<li>wireguard</li>
+</ul>
+<pre><code class="language-sh">winget install --id WireGuard.WireGuard
+</code></pre>
+<ul>
+<li>QQ</li>
+</ul>
+<pre><code class="language-sh">winget install --id Tencent.QQ
+</code></pre>
+<ul>
+<li>wechat</li>
+</ul>
+<pre><code class="language-sh">winget install --id Tencent.WeChat
+</code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="build"><a class="header" href="#build">build</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="mdbook"><a class="header" href="#mdbook">mdbook</a></h1>
 <ol>
