deploy: 1a7d5b4ee288441737fcae967e18ce1cd973b743

--- a/print.html
+++ b/print.html
@@ -89,7 +89,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="Intro.html"><strong aria-hidden="true">1.</strong> 我的笔记</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tool-usage/Intro.html"><strong aria-hidden="true">1.1.</strong> 工具</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tool-usage/Chapter1.html"><strong aria-hidden="true">1.1.1.</strong> Powershell</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter2.html"><strong aria-hidden="true">1.1.2.</strong> Git</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter3.html"><strong aria-hidden="true">1.1.3.</strong> Docker</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter4.html"><strong aria-hidden="true">1.1.4.</strong> wireguard</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter5.html"><strong aria-hidden="true">1.1.5.</strong> vim</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter6.html"><strong aria-hidden="true">1.1.6.</strong> oh-my-posh</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter7.html"><strong aria-hidden="true">1.1.7.</strong> nano</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter8.html"><strong aria-hidden="true">1.1.8.</strong> nodejs</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter9.html"><strong aria-hidden="true">1.1.9.</strong> winget</a></li></ol></li><li class="chapter-item expanded "><a href="web-develop/Intro.html"><strong aria-hidden="true">1.2.</strong> 搭建</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="web-develop/Chapter1.html"><strong aria-hidden="true">1.2.1.</strong> mdbook</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter2.html"><strong aria-hidden="true">1.2.2.</strong> react</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter3.html"><strong aria-hidden="true">1.2.3.</strong> openwrt</a></li></ol></li><li class="chapter-item expanded "><a href="linux/Intro.html"><strong aria-hidden="true">1.3.</strong> linux</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="linux/Chapter1.html"><strong aria-hidden="true">1.3.1.</strong> linux</a></li><li class="chapter-item expanded "><a href="linux/Chapter2.html"><strong aria-hidden="true">1.3.2.</strong> vim</a></li><li class="chapter-item expanded "><a href="linux/Chapter3.html"><strong aria-hidden="true">1.3.3.</strong> Git</a></li><li class="chapter-item expanded "><a href="linux/Chapter4.html"><strong aria-hidden="true">1.3.4.</strong> qbitorrent</a></li></ol></li><li class="chapter-item expanded "><a href="learn/Intro.html"><strong aria-hidden="true">1.4.</strong> learn</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/react/Intro.html"><strong aria-hidden="true">1.4.1.</strong> react</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/react/Chapter1.html"><strong aria-hidden="true">1.4.1.1.</strong> 组件分类</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter2.html"><strong aria-hidden="true">1.4.1.2.</strong> jsx语法</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter3.html"><strong aria-hidden="true">1.4.1.3.</strong> 事件绑定</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter4.html"><strong aria-hidden="true">1.4.1.4.</strong> 响应式数据</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter5.html"><strong aria-hidden="true">1.4.1.5.</strong> 条件渲染和列表循环</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter6.html"><strong aria-hidden="true">1.4.1.6.</strong> 表单绑定</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter7.html"><strong aria-hidden="true">1.4.1.7.</strong> props和组件间传值插槽</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter8.html"><strong aria-hidden="true">1.4.1.8.</strong> 样式操作</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter9.html"><strong aria-hidden="true">1.4.1.9.</strong> 生命周期</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter10.html"><strong aria-hidden="true">1.4.1.10.</strong> -ref和context</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter11.html"><strong aria-hidden="true">1.4.1.11.</strong> 函数组件和hooks</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter12.html"><strong aria-hidden="true">1.4.1.12.</strong> 高阶组件</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter13.html"><strong aria-hidden="true">1.4.1.13.</strong> 性能问题和优化</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter14.html"><strong aria-hidden="true">1.4.1.14.</strong> -router的使用</a></li></ol></li><li class="chapter-item expanded "><a href="learn/vue/Intro.html"><strong aria-hidden="true">1.4.2.</strong> vue</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/vue/Chapter1.html"><strong aria-hidden="true">1.4.2.1.</strong> 组件</a></li><li class="chapter-item expanded "><a href="learn/vue/Chapter2.html"><strong aria-hidden="true">1.4.2.2.</strong> 指令</a></li><li class="chapter-item expanded "><a href="learn/vue/Chapter3.html"><strong aria-hidden="true">1.4.2.3.</strong> 过滤器</a></li><li class="chapter-item expanded "><a href="learn/vue/Chapter4.html"><strong aria-hidden="true">1.4.2.4.</strong> 路由</a></li></ol></li></ol></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="Intro.html"><strong aria-hidden="true">1.</strong> 我的笔记</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tool-usage/Intro.html"><strong aria-hidden="true">1.1.</strong> 工具</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tool-usage/Chapter1.html"><strong aria-hidden="true">1.1.1.</strong> Powershell</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter2.html"><strong aria-hidden="true">1.1.2.</strong> Git</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter3.html"><strong aria-hidden="true">1.1.3.</strong> Docker</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter4.html"><strong aria-hidden="true">1.1.4.</strong> wireguard</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter5.html"><strong aria-hidden="true">1.1.5.</strong> vim</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter6.html"><strong aria-hidden="true">1.1.6.</strong> oh-my-posh</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter7.html"><strong aria-hidden="true">1.1.7.</strong> nano</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter8.html"><strong aria-hidden="true">1.1.8.</strong> nodejs</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter9.html"><strong aria-hidden="true">1.1.9.</strong> winget</a></li></ol></li><li class="chapter-item expanded "><a href="web-develop/Intro.html"><strong aria-hidden="true">1.2.</strong> 搭建</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="web-develop/Chapter1.html"><strong aria-hidden="true">1.2.1.</strong> mdbook</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter2.html"><strong aria-hidden="true">1.2.2.</strong> react</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter3.html"><strong aria-hidden="true">1.2.3.</strong> openwrt</a></li></ol></li><li class="chapter-item expanded "><a href="linux/Intro.html"><strong aria-hidden="true">1.3.</strong> linux</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="linux/Chapter1.html"><strong aria-hidden="true">1.3.1.</strong> linux</a></li><li class="chapter-item expanded "><a href="linux/Chapter2.html"><strong aria-hidden="true">1.3.2.</strong> vim</a></li><li class="chapter-item expanded "><a href="linux/Chapter3.html"><strong aria-hidden="true">1.3.3.</strong> Git</a></li><li class="chapter-item expanded "><a href="linux/Chapter4.html"><strong aria-hidden="true">1.3.4.</strong> qbitorrent</a></li><li class="chapter-item expanded "><a href="linux/Chapter5.html"><strong aria-hidden="true">1.3.5.</strong> docker</a></li><li class="chapter-item expanded "><a href="linux/Chapter6.html"><strong aria-hidden="true">1.3.6.</strong> clash</a></li></ol></li><li class="chapter-item expanded "><a href="learn/Intro.html"><strong aria-hidden="true">1.4.</strong> learn</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/react/Intro.html"><strong aria-hidden="true">1.4.1.</strong> react</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/react/Chapter1.html"><strong aria-hidden="true">1.4.1.1.</strong> 组件分类</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter2.html"><strong aria-hidden="true">1.4.1.2.</strong> jsx语法</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter3.html"><strong aria-hidden="true">1.4.1.3.</strong> 事件绑定</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter4.html"><strong aria-hidden="true">1.4.1.4.</strong> 响应式数据</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter5.html"><strong aria-hidden="true">1.4.1.5.</strong> 条件渲染和列表循环</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter6.html"><strong aria-hidden="true">1.4.1.6.</strong> 表单绑定</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter7.html"><strong aria-hidden="true">1.4.1.7.</strong> props和组件间传值插槽</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter8.html"><strong aria-hidden="true">1.4.1.8.</strong> 样式操作</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter9.html"><strong aria-hidden="true">1.4.1.9.</strong> 生命周期</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter10.html"><strong aria-hidden="true">1.4.1.10.</strong> -ref和context</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter11.html"><strong aria-hidden="true">1.4.1.11.</strong> 函数组件和hooks</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter12.html"><strong aria-hidden="true">1.4.1.12.</strong> 高阶组件</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter13.html"><strong aria-hidden="true">1.4.1.13.</strong> 性能问题和优化</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter14.html"><strong aria-hidden="true">1.4.1.14.</strong> -router的使用</a></li></ol></li><li class="chapter-item expanded "><a href="learn/vue/Intro.html"><strong aria-hidden="true">1.4.2.</strong> vue</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/vue/Chapter1.html"><strong aria-hidden="true">1.4.2.1.</strong> 组件</a></li><li class="chapter-item expanded "><a href="learn/vue/Chapter2.html"><strong aria-hidden="true">1.4.2.2.</strong> 指令</a></li><li class="chapter-item expanded "><a href="learn/vue/Chapter3.html"><strong aria-hidden="true">1.4.2.3.</strong> 过滤器</a></li><li class="chapter-item expanded "><a href="learn/vue/Chapter4.html"><strong aria-hidden="true">1.4.2.4.</strong> 路由</a></li></ol></li></ol></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -1018,6 +1018,65 @@ This is a security risk, please consider changing your password from program pre
 <p>查看帮助：</p>
 <pre><code class="language-sh">qbittorrent-nox -h
 </code></pre>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="docker-1"><a class="header" href="#docker-1">Docker</a></h1>
+<h3 id="安装docker"><a class="header" href="#安装docker">安装docker</a></h3>
+<p><strong>删除旧版本docker</strong></p>
+<pre><code class="language-sh">for pkg in docker.io docker-doc docker-compose docker-compose-v2 podman-docker containerd runc; do sudo apt-get remove $pkg; done
+</code></pre>
+<p><strong>1. 使用apt存储库安装docker</strong></p>
+<p>设置 Docker 的apt存储库</p>
+<pre><code class="language-sh"># Add Docker's official GPG key:
+sudo apt-get update
+sudo apt-get install ca-certificates curl
+sudo install -m 0755 -d /etc/apt/keyrings
+sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
+sudo chmod a+r /etc/apt/keyrings/docker.asc
+
+# Add the repository to Apt sources:
+echo \
+  &quot;deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu \
+  $(. /etc/os-release &amp;&amp; echo &quot;$VERSION_CODENAME&quot;) stable&quot; | \
+  sudo tee /etc/apt/sources.list.d/docker.list &gt; /dev/null
+sudo apt-get update
+</code></pre>
+<p><strong>2. 安装docker</strong></p>
+<pre><code class="language-sh">sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+</code></pre>
+<p><strong>3. 验证是否安装成功</strong></p>
+<pre><code class="language-sh">sudo docker run hello-world
+</code></pre>
+<h3 id="常用命令-2"><a class="header" href="#常用命令-2">常用命令</a></h3>
+<p><strong>1. 启动docker</strong></p>
+<pre><code class="language-sh">sudo systemctl start docker
+</code></pre>
+<p><strong>2. 停止docker</strong></p>
+<pre><code class="language-sh">sudo systemctl stop docker
+</code></pre>
+<p><strong>3. 重启docker</strong></p>
+<pre><code class="language-sh">sudo systemctl restart docker
+</code></pre>
+<p><strong>4. 查看docker版本</strong></p>
+<pre><code class="language-sh">sudo docker version
+</code></pre>
+<p><strong>5. 运行docker镜像</strong></p>
+<pre><code class="language-sh">sudo docker run hello-world
+</code></pre>
+<p><strong>6. 列出docker镜像</strong></p>
+<pre><code class="language-sh">sudo docker images
+</code></pre>
+<p><strong>7. 列出docker容器</strong></p>
+<pre><code class="language-sh">sudo docker ps -a
+</code></pre>
+<p><strong>8. 删除docker镜像</strong></p>
+<pre><code class="language-sh">sudo docker rmi &lt;image_id&gt;
+</code></pre>
+<p><strong>9. 删除docker容器</strong></p>
+<pre><code class="language-sh">sudo docker rm &lt;container_id&gt;
+</code></pre>
+<p><strong>10. 进入docker容器</strong></p>
+<pre><code class="language-sh">sudo docker exec -it &lt;container_id&gt; /bin/bash
+</code></pre>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="clash-in-linux"><a class="header" href="#clash-in-linux">clash in linux</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="learn"><a class="header" href="#learn">learn</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="react-1"><a class="header" href="#react-1">react</a></h1>
 <h2 id="安装-nodejs"><a class="header" href="#安装-nodejs">安装 Node.js</a></h2>
