deploy: 693b8ac35f5075a561798a6beaa3c18cdd0e7ebd

--- a/learn/react/Intro.html
+++ b/learn/react/Intro.html
@@ -205,6 +205,15 @@ npm start
 <p>react-dom： 提供一些dom操作方法，比如渲染、更新、删除等</p>
 <h2 id="react项目组件关系"><a class="header" href="#react项目组件关系">react项目组件关系:</a></h2>
 <p><img src="./images/react%E7%BB%84%E4%BB%B6%E5%85%B3%E7%B3%BB.png" alt="react组件关系" /></p>
+<h2 id="常用工具"><a class="header" href="#常用工具">常用工具</a></h2>
+<ol>
+<li><a href="http://mockjs.com/">Mock.js</a> : 生成随机数据，拦截 Ajax 请求</li>
+<li><a href="https://echarts.apache.org/zh/index.html">Apache ECharts</a>:一个基于 JavaScript 的开源可视化图表库</li>
+<li><a href="https://www.redux.org.cn/">Reduxv5</a> :于JavaScript应用的可预测状态容器</li>
+<li><a href="https://www.axios-http.cn/docs/intro">Axios</a> :Axios 是一个基于 promise 网络请求库</li>
+<li><a href="https://ant.design/index-cn">Ant Design 5.0</a>: 助力设计开发者「更灵活」地搭建出「更美」的产品，让用户「快乐工作」～</li>
+<li><a href="https://reactrouter.com/en/main">reactrouter</a>：React Router 是一个基于 React 的路由管理器，用来管理单页应用中的路由和导航。</li>
+</ol>
 
                     </main>
 
