--- a/learn/react/Intro.html
+++ b/learn/react/Intro.html
@@ -212,7 +212,7 @@ npm start
 <li><a href="https://www.redux.org.cn/">Reduxv5</a> :于JavaScript应用的可预测状态容器</li>
 <li><a href="https://www.axios-http.cn/docs/intro">Axios</a> :Axios 是一个基于 promise 网络请求库</li>
 <li><a href="https://ant.design/index-cn">Ant Design 5.0</a>: 助力设计开发者「更灵活」地搭建出「更美」的产品，让用户「快乐工作」～</li>
-<li><a href="https://reactrouter.com/en/main">reactrouter</a>：React Router 是一个基于 React 的路由管理器，用来管理单页应用中的路由和导航。</li>
+<li><a href="https://reactrouter.com/en/main">reactrouter</a>:React Router 是一个基于 React 的路由管理器，用来管理单页应用中的路由和导航。</li>
 </ol>
 
                     </main>
