--- a/print.html
+++ b/print.html
@@ -1070,8 +1070,10 @@ cp #复制目录
 <li>保存并退出文件：<code>:wq</code></li>
 <li>打开上一个文件：<code>:e #</code></li>
 <li>打开下一个文件：<code>:e #</code></li>
-<li>显示行号：<code>:set number</code>    </li>
+<li>显示行号：<code>:set number</code></li>
 </ul>
+<h3 id="配置vim"><a class="header" href="#配置vim">配置vim</a></h3>
+<p>打开配置文件：<code>vim ~/.vimrc</code></p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="git-1"><a class="header" href="#git-1">git</a></h1>
 <h2 id="下载-git"><a class="header" href="#下载-git">下载 git</a></h2>
 <pre><code class="language-sh">sudo apt update
@@ -1218,7 +1220,7 @@ npm start
 <li><a href="https://www.redux.org.cn/">Reduxv5</a> :于JavaScript应用的可预测状态容器</li>
 <li><a href="https://www.axios-http.cn/docs/intro">Axios</a> :Axios 是一个基于 promise 网络请求库</li>
 <li><a href="https://ant.design/index-cn">Ant Design 5.0</a>: 助力设计开发者「更灵活」地搭建出「更美」的产品，让用户「快乐工作」～</li>
-<li><a href="https://reactrouter.com/en/main">reactrouter</a>：React Router 是一个基于 React 的路由管理器，用来管理单页应用中的路由和导航。</li>
+<li><a href="https://reactrouter.com/en/main">reactrouter</a>:React Router 是一个基于 React 的路由管理器，用来管理单页应用中的路由和导航。</li>
 </ol>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="组件分类"><a class="header" href="#组件分类">组件分类</a></h1>
 <p>组件化开发，定义一个基本组件得有东西</p>
