deploy: 4dc36fe331b847befdbe122edeea9e0110a4a739

--- a/print.html
+++ b/print.html
@@ -840,6 +840,7 @@ npm -v # 应该打印 `10.8.2`】
 </ul>
 <pre><code class="language-sh">winget install --id Tencent.WeChat
 </code></pre>
+<p><a href="blob:https://github.com/7d0f356c-c449-455f-ae61-81c27de91baa">winget.bat</a></p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="build"><a class="header" href="#build">build</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="mdbook"><a class="header" href="#mdbook">mdbook</a></h1>
 <ol>
